--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,37 @@
 }
 .App{
     text-align: center;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 h1{
     margin: 0;
-    color: white;
 }
 
 .header{
-    background-color: rgb(71, 247, 71);
+    background-color: #192a56;
     padding: 15px;
+    color: white;
+    width: 100%;
+}
+
+.form{
+    margin-top: 15px;
+}
+
+.data{
+    margin-top: 15px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.data_value{
+    display: flex;
+    justify-content: space-between;
+    width: 50%;
 }
