--- a/src/App.css
+++ b/src/App.css
@@ -34,8 +34,10 @@ h1{
     align-items: center;
 }
 
-.data_value{
+.data-value{
     display: flex;
     justify-content: space-between;
-    width: 50%;
+    width: 60%;
+    padding: 9px 0px 9px 0px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
